make warning about missing index entries for large keys nicer SERVER-2693